add_library(directed-depth-first-search OBJECT
            depth-first-search.h)

add_library(directed-cycle OBJECT
            cycle.h)

add_library(directed-breadth-first-search OBJECT
            breadth-first-search.h)

add_library(topological-sort OBJECT
            topological-sort.h)

add_library(kosaraju-sharir OBJECT
            kosaraju-sharir.h)
